--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <header>
-      <img src="./assets/mora..png" alt="logo" />
-      <nav>
-        <ul class="navbar">
-          <li><a href="#">Inicio</a></li>
-          <li><a href="#">Nosotros</a></li>
+      <img src="./assets/mora.-removebg-preview.png" alt="logo" />
+      <nav class="navbar">
+        <ul class="navbar-list">
+          <li><a href="#portada">Inicio</a></li>
+          <li><a href="#nosotros">Nosotros</a></li>
           <li><a href="#">Servicios</a></li>
           <li><a href="#">Contacto</a></li>
         </ul>
@@ -20,15 +20,21 @@
     </header>
     <main>
       <section id="portada">
-        <div class="portada-container">
-          <div class="info">
-            <h1>Una agencia de marketing digital enfocada 100% en resultados</h1>
-            <p>Existimos para que nuestros clientes encuentren en nosotros una manera sencilla, honesta, comprensible y concreta de aumentar sus ventas en el mundo digital.</p>
-            <a href="#" class="info-boton">Solicitar Cotización</a>
-          </div>
+        <div class="portada-info">
+          <h1>Una agencia de marketing digital enfocada 100% en resultados</h1>
+          <p>Existimos para que nuestros clientes encuentren en nosotros una manera sencilla, honesta, comprensible y concreta de aumentar sus ventas en el mundo digital.</p>
 
-          <img src="./assets/undraw_marketing_re_7f1g.svg" alt="" />
+          <div class="portada-opciones">
+            <a href="#" class="portada-cotizacion">Solicitar cotización</a>
+            <a href="#" class="portada-mas-info">Más información</a>
+          </div>
         </div>
+
+        <img src="./assets/undraw_mobile_marketing_re_p77p.svg" alt="" />
+      </section>
+
+      <section id="nosotros">
+        <p>Nuestra experiencia en la <span>gestión de campañas digitales</span> de diversos productos y servicios nos prepara para los desafíos de cada industria y actividad. Desarrollamos <span>estrategias de marketing digital</span> para nuestros clientes, desde la etapa de planeamiento hasta la implementación de campañas, medición de resultados y asesoramiento personalizado.</p>
       </section>
     </main>
   </body>
