fix media queries

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           </div>
         </div>
 
-        <img src="./assets/undraw_mobile_marketing_re_p77p.svg" alt="" />
+        <img src="./assets/undraw_mobile_marketing_re_p77p.svg" alt="Imagen corporativa Marketing" />
       </section>
 
       <section id="nosotros">
@@ -43,25 +43,25 @@
 
         <div class="cards-container">
           <div class="cards">
-            <img src="./assets/lista-de-verificacion.gif" alt="" />
+            <img src="./assets/lista-de-verificacion.gif" alt="Lista de verificación" />
             <h3>Etapa 1</h3>
             <p>Comprender el contenido del cliente y ver sus necesidades.</p>
           </div>
 
           <div class="cards">
-            <img src="./assets/grafico-de-linea.gif" alt="" />
+            <img src="./assets/grafico-de-linea.gif" alt="Gráfico de línea" />
             <h3>Etapa 2</h3>
             <p>Diseñar de estrategia con los objetivos.</p>
           </div>
 
           <div class="cards">
-            <img src="./assets/promover.gif" alt="" />
+            <img src="./assets/promover.gif" alt="Ícono de megáfono" />
             <h3>Etapa 3</h3>
             <p>Correr las campañas y los anuncios para llegar a ese objetivo que nos propusimos.</p>
           </div>
 
           <div class="cards">
-            <img src="./assets/flujo-de-dinero.gif" alt="" />
+            <img src="./assets/flujo-de-dinero.gif" alt="Ícono de dinero" />
             <h3>Etapa 4</h3>
             <p>Revisar cómo fue el proceso e iteramos para obtener mejoras.</p>
           </div>
@@ -70,7 +70,7 @@
     </main>
 
     <footer id="contacto">
-      <img class="contactanos-img" src="./assets/Email campaign-pana.svg" alt="" />
+      <img class="contactanos-img" src="./assets/Email campaign-pana.svg" alt="Imagen corporativa de contacto" />
 
       <div class="derecha">
         <h2>¿Estás listo para potenciar tu negocio?</h2>
@@ -89,16 +89,16 @@
             <label for="email"></label>
             <input type="email" placeholder=" Correo" name="email" class="email" id="email" required />
 
-            <label for=""></label>
-            <input type="text" placeholder=" Empresa" name="" id="" />
+            <label for="empresa"></label>
+            <input type="text" placeholder=" Empresa" name="empresa" id="empresa" />
           </div>
 
           <div class="message">
             <label for="message"></label>
-            <textarea name="" placeholder=" Mensaje" id="" rows="2" maxlength="300" required></textarea>
+            <textarea name="message" placeholder=" Mensaje" id="message" rows="2" maxlength="300" required></textarea>
           </div>
 
-          <input type="submit" value="Enviar" class="form-enviar" />
+          <input type="submit" value="Enviar" class="form-enviar" id="form-enviar" />
         </form>
 
         <div class="redes">
